--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon -r dotenv/config index.js"
   },
   "author": "Goran",
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "jest": "^26.6.1",
     "nodemon": "^2.0.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
